...
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#990000"
    tools:context=".LoginActivity">

    <EditText
        android:id="@+id/usernameLoginBox"
        android:layout_width="200dp"
        android:layout_height="48dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:inputType="textPersonName"
...
        android:textColorHint="#FFFFFF"
        app:layout_constraintStart_toEndOf="@+id/usernameLoginView"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="Autofill,LabelFor" />

    <EditText
        android:id="@+id/passwordLoginBox"
        android:layout_width="200dp"
        android:layout_height="48dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="15dp"
        android:ems="10"
        android:inputType="textPassword"
...
        android:textColor="#FFCC00"
        android:gravity="center_vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/usernameLoginView" />

    <Button
        android:id="@+id/loginButton"
        android:layout_width="200dp"
        android:layout_height="55dp"
        android:layout_marginTop="20dp"
        android:backgroundTint="#FFCC00"
        android:onClick="onClickLogIn"
        android:text="Log In!"
...
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/passwordLoginBox"
        app:strokeColor="#FFFFFF" />

    <EditText
        android:id="@+id/usernameSignupBox"
        android:layout_width="200dp"
        android:layout_height="48dp"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="100dp"
        android:ems="10"
        android:inputType="textPersonName"
...
        android:textColorHint="#FFFFFF"
        app:layout_constraintStart_toEndOf="@+id/usernameSignupView"
        app:layout_constraintTop_toBottomOf="@+id/loginButton"
        tools:ignore="Autofill" />

    <EditText
        android:id="@+id/nameSignupBox"
        android:layout_width="200dp"
        android:layout_height="48dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="15dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:textColor="#FFCC00"
        android:textColorHint="#FFFFFF"
        app:layout_constraintStart_toEndOf="@+id/fullNameSignupView"
        app:layout_constraintTop_toBottomOf="@+id/passwordSignupBox" />

    <EditText
        android:id="@+id/passwordSignupBox"
        android:layout_width="200dp"
        android:layout_height="48dp"
        android:layout_marginStart="15dp"
...
        android:textColor="#FFCC00"
        android:textColorHint="#FFFFFF"
        app:layout_constraintStart_toEndOf="@+id/passwordSignupView"
        app:layout_constraintTop_toBottomOf="@+id/usernameSignupBox" />

    <EditText
        android:id="@+id/emailSignupBox"
        android:layout_width="200dp"
        android:layout_height="48dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="15dp"
        android:ems="10"
        android:inputType="textEmailAddress"
...
        android:gravity="center_vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fullNameSignupView" />


    <Button
        android:id="@+id/signupButton"
        android:layout_width="200dp"
        android:layout_height="55dp"
        android:layout_marginTop="20dp"
        android:backgroundTint="#FFCC00"
        android:onClick="onClickSignUp"
        android:text="Sign Up!"
...
