<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/ic_profile"
            android:title="@string/menu_profile" />
        <item
            android:id="@+id/nav_create"
            android:icon="@drawable/ic_create"
            android:title="@string/menu_create" />
        <item
            android:id="@+id/nav_userEventDisplay"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_userEventDisplay" />
        <item
            android:id="@+id/mapsFragment"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/menu_map" />
        <item
            android:id="@+id/listFragment"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/menu_list" />
    </group>
</menu>