...
        android:text="Click to see event information."
        android:textColor="#000000"
        android:textSize="20sp"
        android:layout_gravity="center" />

    <ListView
        android:id="@+id/list"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>

</LinearLayout>
